# hms-harmful-brain-activity-classification

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: ensemble.yaml  model1_effnet_spectrogram.yaml  model2_resnet1d_gru.yaml  model3_effnet_official_spec.yaml
data/processed/: README.md  public_development_class_counts.csv
docs/: original_archive_inventory.md  top_tier_reviewer_packet.md
notebooks/: maturity_walkthrough.ipynb
notebooks/original/: readme.txt
reports/: data_card.md  experiment_summary.md  hms_solution_showcase_report.md  maturity_review.md  method_report.md  reproduction_notes.md  second_pass_solution_engineering_review.md
reports/results/: artifact_manifest.json  claim_evidence_matrix.csv  experiment_index.json  maturity_showcase_metrics.csv  model1_smoke_metrics.json  model2_smoke_metrics.json  model3_smoke_metrics.json  model_family_summary.csv  public_development_class_counts.csv  reproducibility_manifest.json  second_pass_ensemble_config_audit.csv  second_pass_notebook_archive_metrics.csv  second_pass_reproduction_readiness.csv  second_pass_submission_sanity.csv  smoke_ensemble_submission.csv  smoke_submission.csv  top_tier_quality_gate.json
scripts/: _bootstrap.py  blend_submissions.py  build_review_pack.py  download_data.py  prepare_metadata.py  run_inference.py  train_model1.py  train_model2.py  train_model3.py
src/hms_solution/: __init__.py  config.py  constants.py  cv_summary.py  datasets.py  (+11 more)
tests/: test_maturity_assets.py  test_project_artifacts.py  test_second_pass_review_pack.py  test_smoke_models.py
(+5 files in other folders)
